# log_x

./: .gitignore  Cargo.toml  README.md
examples/: complex_log_with_destinations.rs  gloabal_log.txt  mod_four_log.txt  mod_one_log.txt  mod_two_log.txt  multi_log_level.rs  simple.rs  test.rs
examples/log/: log_gloabal_log.txt  log_mod_four_log.txt  log_mod_one_log.txt  log_mod_two_log.txt
src/: global_logger.rs  lib.rs  log_levels.rs  loggers.rs  macros.rs  mod_logger.rs  output.rs
src/loggers/: global_logger.rs  log_levels.rs  mod_logger.rs
src/macros/: macros.rs
src/output/: logdest.rs
src/terminal/: colors.rs
