[package]
name = "log_x"
repository = "https://github.com/icsboyx/log_x"
authors = ["icsboyx"]
description = """
The `Log X` library provides a flexible and extensible logging framework for Rust applications. 
It supports different log levels, module-specific logging, and customizable log output targets.
"""
categories = ["development-tools::debugging"]
version = "0.3.2"
edition = "2024"
license = "MIT"
keywords = ["log", "logger", "logging"]


[dependencies]
